<resources>
    <string name="net_error">网络异常，请查看设备是否联网</string>
    <string name="no_input_content">抱歉，搜索不到您输入的节目，请重新输入</string>
    <string name="input_content">请输入搜索内容</string>
    <string name="insert_image">插入图片</string>
    <string name="delete_image">删除图片</string>
    <string name="current_watch">正在收看: </string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="clear_words">清除文字</string>
    <string name="app_name">Tivic Phone</string>
    <string name="base_epg">直播频道</string>
    <string name="base_mytv">我的电视</string>
    <string name="base_pushtv">热播节目</string>
    <string name="base_social">我的TV客</string>
    <string name="base_programe">节目名称</string>
    <string name="base_tieba">贴吧</string>
    <string name="base_search">搜索</string>
    <string name="base_search_result">搜索结果</string>
    <string name="base_login_remind">请您登陆</string>
    <string name="base_login_remind_ugc">您登陆后才能够进入该节目的贴吧，请先登陆。</string>
    <string name="loadingpage_text">努力加载中，精彩马上呈现......</string>
    <string name="remeberpwd">记住密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="auto_login">自动登录</string>
    <string name="weibo_login">使用新浪微博账号登录</string>
    <string name="user_account">账号:</string>
    <string name="findpwd_via_email">通过邮箱找回</string>
    <string name="findpwd_viaphone">通过手机找回</string>
    <string name="user_pwd">密码:</string>
    <string name="user_account_remind">邮箱和手机号是登录TIVIC的帐号及取回密码凭证</string>
    <string name="user_pwd_remind">6——15位</string>
    <string name="user_pwd_again">确认密码:</string>
    <string name="user_pwd_again_remind">请再输入一次密码</string>
    <string name="chk_readservice">已阅读并同意</string>
    <string name="readservice">使用条款和隐藏政策</string>
    <string name="registied_account_login">使用已有帐号登录</string>
    <string name="store_describe">商品描述</string>
    <string name="store_detail">商品描述从外观上来说，长城T46笔记本电脑拥有经典的黑色外观</string>
    <string name="store_price">参考价格: ￥</string>
    <string name="store_other">你还可以浏览其他商品</string>
    <string name="default_text_comment">请输入文字进行评论(140字以内)</string>
    <string name="default_text_comment_title">请输入帖子主题(30字以内)</string>
    <string name="default_text_comment_content">请输入帖子内容(140字以内)</string>
    <string name="default_text_publish">请输入文字发帖或回帖(140字以内)</string>
    <string name="default_text_sendmessage">请输入文字发私信(140字以内)</string>
    <string name="new_store">新商品~~~~~</string>
    <string name="member_reviews">会员评论</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="behind_register">后参与讨论吧!</string>
    <string name="prompt_login">您还未登录,请</string>
    <string name="content_video_publish">还没有用户发表评论,快来</string>
    <string name="content_publish">抢占</string>
    <string name="content_video_idea">沙发吧!</string>
    <string name="video_from">视频来源于:</string>
    <string name="day_pre">前一天</string>
    <string name="day_next">后一天</string>
    <string name="day_night">午夜时段</string>
    <string name="day_morning">早间时段</string>
    <string name="day_afternoon">午间时段</string>
    <string name="day_goldtime">黄金时段</string>
    <string name="user_phone_number">手机:</string>
    <string name="user_email_address">邮箱:</string>
    <string name="login_visitor">游客登录</string>
    <string name="channel_anhui">安徽卫视</string>
    <string name="social_remind_new">新</string>
    <string name="social_modify_sign_success">修改签名成功</string>
    <string name="social_modify_sign_error">修改签名失败</string>
    <string name="social_modify_avater_success">修改头像成功</string>
    <string name="social_modify_avater_error">修改头像失败</string>
    <string name="pushtv_alert_info">数据加载中....</string>
    <string name="login_send_code_to_phone">验证码已发送至您手机，</string>
    <string name="login_sending_code_to_phone">验证码发送中，请稍候</string>
    <string name="login_validation_code">验证码:</string>
    <string name="login_send_code_dismiss">秒后重发！</string>
    <string name="setting_title">设置中心</string>
    <string name="setting_voice">提示音：</string>
    <string name="setting_guide">引导页</string>
    <string name="setting_position">位置公开</string>
    <string name="setting_share">分享给好友</string>
    <string name="setting_modify_info">修改个人资料</string>
    <string name="setting_modify_pwd">修改密码</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_user_feedback">用户反馈</string>
    <string name="setting_score">评分</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_logout">注销</string>
    <string name="setting_upgrade_version">版本升级</string>
    <string name="setting_modifypwd_pwd">原密码  : </string>
    <string name="setting_modifypwd_newpwd">新密码  : </string>
    <string name="setting_modifypwd_repeat_newpwd">再次输入</string>
    <string name="setting_modifypwd_input_pwd">输入原密码</string>
    <string name="setting_modifypwd_input_newpwd">输入新密码</string>
    <string name="setting_modifypwd_repeat_input_newpwd">再次输入新密码</string>
    <string name="setting_modifypwd_confirm">确认</string>
    <string name="setting_get_lastest_version">正在检查，请稍后</string>
    <string name="setting_modifypwd_input_pwd_error">原密码不能为空</string>
    <string name="setting_modifypwd_input_newpwd_error">新密码不能为空</string>
    <string name="setting_modifypwd_repeat_input_newpwd_error">重复密码不能为空</string>
    <string name="setting_modifypwd_newpwd_not_equal">两次输入的密码不一致</string>
    <string name="setting_modifypwd_success">密码修改成功</string>
    <string name="setting_share_detail">TV客是一款基于电视节目的社交新媒体功能强大的软件，它集电视社交、电视淘宝、电视预告等多功能于一身，还等什么，赶快去下载吧！</string>
    <string name="setting_shareto_friend">分享给好友</string>
    <string name="setting_modifypwd_error">原密码输入有误，请重新输入</string>
    <string name="setting_logouting">正在注销</string>
    <string name="setting_login_first">您还未登录</string>
    <string name="setting_logout_success">注销成功</string>
    <string name="setting_app_name">TV客</string>
    <string name="setting_version">版本号:</string>
    <string name="setting_developer">开发者:北京闪联云视信息技术有限公司</string>
    <string name="setting_about_detail">更多信息请关注http://www.tivic.com/</string>
    <string name="setting_after_score">谢谢您的评分，我们会继续努力的</string>
    <string name="login_register_email_send_code_text1">邮件发送成功！</string>
    <string name="login_register_email_send_code_text4">邮件成功发送至</string>
    <string name="login_register_email_send_code_text3">邮件重新发送成功！</string>
    <string name="login_register_email_send_code_text2">请前往邮箱进行激活！</string>
    <string name="login_register_email_send_error">邮件发送失败，请检查邮件是否正确</string>
    <string name="login_register_email_send_forpwd_error">邮件发送失败</string>
    <string name="login_register_email_send_forpwd_exception">邮件发送异常</string>
    <string name="login_request_time_out">登录超时</string>
    <string name="login_net_error">网络未连接，请检查</string>
    <string name="login_request_exception">请求异常</string>
    <string name="login_regsited_phone_not_actived">账户未激活，您可以重新注册</string>
    <string name="newpwd_repeat_valid_error">确认密码不能为空</string>
    <string name="newpwd_not_equal">两次输入的密码不一致</string>
    <string name="newpwd_valid_error">密码格式错误</string>
    <string name="login_register_email_error">邮件格式错误</string>
    <string name="login_register_username_error">用户名格式错误，请检查</string>
    <string name="login_registed_hobby_title">个人基本信息</string>
    <string name="login_registed_hobby_nickname">昵称： </string>
    <string name="login_registed_hobby_birth">生日： </string>
    <string name="login_registed_handle">操作正在处理，请稍候</string>
    <string name="login_registed_hobby_birth_wrong">请填写正确的出生日期</string>
    <string name="login_registed_hobby_birth_error">生日格式不正确，请重新填写</string>
    <string name="login_registed_hobby_birth_year_error">请填写正确的年份</string>
    <string name="login_registed_hobby_birth_text">例：1986-06-28系统自动算出您的年龄和星座，您的生日不会出现在资料里。</string>
    <string name="login_registed_hobby_default_signature">我很懒，暂时还没填写签名</string>
    <string name="friend_default_sign">这家伙很懒，什么也没留下~~</string>
    <string name="login_registed_hobby_signature_error">签名字数(包括符合)不能多于32个字</string>
    <string name="menu_setting">设置</string>
    <string name="menu_back">返回</string>
    <string name="menu_home">主页</string>
    <string name="menu_search">注销</string>
    <string name="menu_myinfo">我的资料</string>
    <string name="menu_exit">退出</string>
    <string name="menu_login_first">您还未登录，请先登录</string>
    <string name="login_dialog_username_error">账号不能为空</string>
    <string name="login_dialog_pwd_error">密码不能为空</string>
    <string name="login_registed_hobby_age">年龄： </string>
    <string name="login_registed_hobby_animalsign">星座： </string>
    <string name="login_registed_hobby_signature">签名： </string>
    <string name="login_registed_hobby_sex">性别： </string>
    <string name="login_registed_hobby_signtext">最多输入32个字符。</string>
    <string name="login_registed_hobby_signtext_max">您最多只能输入32个字</string>
    <string name="login_registed_hobby_nickname_max">昵称最多为14个字</string>
    <string name="login_registed_hobby_sextext">注册后性别不能改变。</string>
    <string name="login_registed_hobby_title2">个人兴趣调查</string>
    <string name="login_registed_hobby_weibo_content">绑定后可用新浪微博登陆，转发贴。(点击绑定/取消绑定)</string>
    <string name="login_registed_hobby_weibo_content1">绑定后可用新浪微博登陆，转发贴。</string>
    <string name="login_registed_hobby_weibo_content2">(点击绑定/取消绑定)</string>
    <string name="login_registed_hobby_favorite_star">选择你喜欢的明星</string>
    <string name="login_registed_hobby_favorite_three">最多可以选择选三个</string>
    <string name="login_registed_hobby_favorite_program">选择你喜欢的节目</string>
    <string name="login_registed_hobby_favorite_content">选择你喜欢的内容</string>
    <string name="login_registed_hobby_favorite_selected">您关注了  </string>
    <string name="login_registed_hobby_favorite_canceled">您取消了关注   </string>
    <string name="login_registed_hobby_favorite_remained">  您还可以关注</string>
    <string name="login_registed_hobby_favorite_max">您最多可以关注</string>
    <string name="login_registed_hobby_star_remained">个喜欢的明星 </string>
    <string name="login_registed_hobby_program_remained">个喜欢的节目</string>
    <string name="login_registed_hobby_content_remained">个喜欢的内容 </string>
    <string name="login_registed_warning">提示</string>
    <string name="login_registed_fasten_weibo_success">微博绑定成功</string>
    <string name="login_registed_unfasten_weibo_success">解除绑定成功</string>
    <string name="login_registed_fasten_weibo_fail">微博绑定失败</string>
    <string name="login_registed_unfasten_weibo_fail">解除绑定失败</string>
    <string name="login_registed_isfastening_weibo">正在绑定微博...</string>
    <string name="login_registed_isunfastening_weibo">正在解除绑定...</string>
    <string name="login_registed_confirm_leave">基本资料还没填写完成，您确定要离开吗?</string>
    <string name="login_registed_confirm_leave_modify_pwd">修改密码还未完成，您确定要离开吗?</string>
    <string name="login_registed_confirm">确定</string>
    <string name="login_registed_cancel">取消</string>
    <string name="setting_sound_opened">提示声音已打开</string>
    <string name="setting_sound_closed">提示声音已关闭</string>
    <string name="setting_wifi_download_opened">仅WIFI下下载已打开</string>
    <string name="setting_wifi_download_closed">仅WIFI下下载已关闭</string>
    <string name="setting_tuisong_opened">推送通知已打开</string>
    <string name="setting_tuisong_closed">推送通知已关闭</string>
    <string name="setting_guide_opened">引导页已打开</string>
    <string name="setting_guide_closed">引导页已关闭</string>
    <string name="setting_position_opened">位置已公开</string>
    <string name="setting_position_closed">位置未公开</string>
    <string name="setting_feedback_error">反馈信息不能为空</string>
    <string name="setting_feedback_success">反馈信息已提交，谢谢您的宝贵意见</string>
    <string name="login_findpwd_newpwd">新密码：</string>
    <string name="login_findpwd_modify_success">密码修改成功</string>
    <string name="login_findpwd_get_code">点击发送获取验证码!</string>
    <string name="login_regsited_account">邮箱/手机号</string>
    <string name="login_regsited_sendmail_again">再次发送验证邮件</string>
    <string name="default_email">您用来登录的email地址</string>
    <string name="default_phone">您用来登录的手机号</string>
</resources>