<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/prompt_login"
        android:textColor="@color/base_content"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/content_login"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/login"
        android:textColor="@color/light_blue"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="/"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/content_reg"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/register"
        android:textColor="@color/light_blue"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/behind_register"
        android:textColor="@color/base_content"
        android:textSize="16dp" />

</LinearLayout>