<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/content_video_publish"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/content_comment"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/content_publish"
        android:textColor="@color/light_blue"
        android:textSize="18dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/content_video_idea"
        android:textSize="15dp" />
</LinearLayout>