<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/setting_score"
        android:textSize="25sp"
        android:textColor="#ff000000"
        android:textStyle="bold" />

	<RatingBar 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:max="5"
	   	android:rating="1"
	    />
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center"
	    >
	    <Button 
		android:id="@+id/confirm"
	    android:layout_marginTop="20dp"
	    android:gravity="center"
	    android:layout_width="80dp"
	    android:layout_height="wrap_content"
	    android:text="@string/login_registed_confirm"
	    />
	     <Button 
	    android:id="@+id/cancel"
	    android:layout_marginTop="20dp"
	    android:gravity="center"
	    android:layout_width="80dp"
	    android:layout_marginLeft="20dp"
	    android:layout_height="wrap_content"
	    android:text="@string/login_registed_cancel"
	    />
	</LinearLayout>
	
</LinearLayout>