<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/three_textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="5dip"
        android:text="@string/new_store" />
    <TextView
        android:id="@+id/news_detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/three_textView"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/store_detail" />
    <TextView
        android:id="@+id/member_reviews"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/news_detail"
        android:paddingLeft="10dip"
        android:text="@string/member_reviews" />
	<LinearLayout 
            android:layout_below="@id/member_reviews"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_prompt"
            android:orientation="horizontal"
            android:gravity="center"
            >
        </LinearLayout>
</RelativeLayout>