<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/all_bg" >

    <ImageView
        android:id="@+id/logo"
        style="@style/logoStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:id="@+id/ll_findpwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_findpwd_mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:src="@drawable/login_findpassword_mail_normal"/>

        <ImageView
            android:id="@+id/iv_findpwd_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:src="@drawable/login_findpassword_phone_selected" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_findpwd_mail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_findpwd"
        android:layout_marginTop="20dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_email"
            style="@style/login_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/user_email_address" />

        <EditText
            android:id="@+id/et_mail"
            style="@style/edittext_padding"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_email"
            android:hint="@string/default_email"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/iv_send_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/et_mail"
            android:layout_below="@id/et_mail"
            android:layout_marginTop="50dp"
            android:src="@drawable/registered_email_verification_send_a_message" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_findpwd_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_findpwd"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/user_phone_number"
            android:textColor="#333333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_phone"
            style="@style/edittext_padding"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/tv_phone"
            android:hint="@string/default_phone"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/tv_phone"
            android:layout_below="@id/tv_phone"
            android:layout_marginTop="48dp"
            android:text="@string/login_validation_code"
            android:textColor="#333333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_code"
            style="@style/edittext_padding"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_phone"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/tv_code"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/iv_send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_phone"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="28dp"
            android:layout_toRightOf="@id/et_code"
            android:src="@drawable/fasong" />

        <TextView
            android:id="@+id/tv_send_already"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/et_code"
            android:layout_below="@id/et_code"
            android:layout_marginTop="15dp"
            android:text="@string/login_findpwd_get_code"
            android:textColor="#666666"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_time_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_send_already"
            android:layout_below="@id/tv_send_already"
            android:text="60"
            android:textColor="@color/login_red"
            android:visibility="invisible" >
        </TextView>

        <TextView
            android:id="@+id/tv_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_time_count"
            android:layout_toRightOf="@id/tv_time_count"
            android:text="@string/login_send_code_dismiss"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/iv_next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/et_code"
            android:layout_below="@id/et_code"
            android:layout_marginTop="64dp"
            android:src="@drawable/registered_next_button_bluebg" />
    </RelativeLayout>

    <TextView
        android:id="@+id/registied_account_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="32dp"
        android:text="@string/registied_account_login"
        android:textColor="#1da3e3"
        android:textSize="17sp" />

</RelativeLayout>