<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/all_bg"
    android:gravity="center_horizontal"
   >

    <LinearLayout
        android:id="@+id/ll_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chart_logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_registration_page_one"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_below="@id/ll_logo"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.8"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="10dp"
                android:text="@string/user_account"
                android:textColor="#333333"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/ed_re_user_account"
                    android:layout_height="wrap_content"
                    android:layout_width="200dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/diagram_inputbox"
                    android:hint="@string/login_regsited_account"
                    android:singleLine="true" >

                    <requestFocus />
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/user_account_remind"
                    android:textColor="#333333"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="20dp"
                android:text="@string/user_pwd"
                android:textColor="#333333"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/ed_re_user_pwd"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/diagram_inputbox"
                    android:password="true"
                    android:singleLine="true" >
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/user_pwd_remind"
                    android:textColor="#333333"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2.8"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="20dp"
                android:text="@string/user_pwd_again"
                android:textColor="#333333"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/ed_re_user_pwd_again"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/diagram_inputbox"
                    android:password="true"
                    android:singleLine="true" >
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/user_pwd_again_remind"
                    android:textColor="#333333"
                    android:textSize="16sp" />


                <Button
                    android:id="@+id/bt_login_register_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/registered_next_button_bluebg" />
            </LinearLayout>
        </LinearLayout>
    <TextView
        android:id="@+id/registied_account_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="32dp"
		android:layout_gravity="bottom"
        android:text="@string/registied_account_login"
        android:textColor="#1da3e3"
        android:textSize="17sp" />
    </LinearLayout>

	
</RelativeLayout>