<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/all_bg"
    >

    <ImageView
        android:id="@+id/logo"
        style="@style/logoStyle"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/ll_findpwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_findpwd_mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:src="@drawable/login_findpassword_mail_selected" />

        <ImageView
            android:id="@+id/iv_findpwd_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="15dp"
            android:src="@drawable/login_findpassword_phone_normal" />
    </LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/ll_findpwd"
	    android:layout_marginTop="40dp"
	    android:orientation="vertical"
	    android:gravity="center"
	    >
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/login_title_text"
               	android:textSize="19sp"
                android:textColor="#666666"
	        android:text="@string/login_register_email_send_code_text1"
	        />
	     <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	          android:layout_marginTop="5dp"
               	android:textSize="19sp"
                android:textColor="#666666"
	        style="@style/login_title_text"
	        android:text="@string/login_register_email_send_code_text2"
	        />
	     <ImageView 
	         android:id="@+id/iv_complete"
	         android:layout_marginTop="40dp"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
			 android:src="@drawable/login_registed_personal_interes_completed_survey"
	         />
	     <TextView
	         android:id="@+id/tv_resend_mail"
	         android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
                android:layout_below="@id/iv_complete"
                android:layout_marginTop="25dp"
                android:textStyle="italic"
                android:text="@string/login_regsited_sendmail_again"
                android:textSize="16sp"
                android:textColor="#1da3e3"
	         />
	         
	</LinearLayout>
	 <TextView
        android:id="@+id/registied_account_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="32dp"
        android:text="@string/registied_account_login"
        android:textColor="#1da3e3"
        android:textSize="17sp" />

</RelativeLayout>